# elon_musk_dataset

./: README.md  constants.py  models.py  pyproject.toml
collect_data/: collectors.py  run.py
data/datasets/: all_dialog_dataset.csv  all_oneliners_dataset.csv  all_phrases_dataset.csv  interview_oneliners_dataset.csv  short_answer_dialog_dataset.csv  twitter_dataset.csv
data/raw/: rev-interviews.jsonlines  vox-interview.jsonlines
datasets/: all_dialog_dataset.csv  all_phrases_dataset.csv  short_answer_dialog_dataset.csv
notebooks/: create_oneliners_dataset.ipynb  create_twitter_dataset.ipynb  fine_tuning_t5_for_dialogs.ipynb  generate_questions.ipynb
scrap/: rev.py  vox.py
utils/: __init__.py  reader.py  writer.py
utils/filters/: __init__.py  dialog.py  replica.py
