[tool.poetry]
name = "elon_musk_dataset"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
pydantic = "*"
tqdm = "*"
requests = "*"
typer = "*"

[tool.poetry.dev-dependencies]
notebook = "*"
pandas = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
